# BigData-Anlys-Viz

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260616_0001_create_initial_schema.py  20260620_0002_add_catalog_embedding_vector.py  20260620_0002_add_vector_column.py
backend/app/api/endpoints/: auth.py  catalog.py  curation.py  dashboard.py  proposal.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  catalog.py  cost_benefit.py  curation.py  proposal.py  system_setting.py
backend/app/db/: check_inconsistencies.py  generate_fake_catalog.py  init_db.py  models.py  seed_demo_data.py  verify_catalog_import.py  verify_pgvector_migration.py  verify_pgvector_query.py  verify_pgvector_schema.py
backend/app/schemas/: catalog.py  curation.py  proposal.py
backend/app/services/: ai_service.py  catalog_match_service.py  catalog_service.py  rss_service.py
backend/tests/: test_ai_service.py  test_auth.py  test_catalog_endpoint.py  test_catalog_match_service.py  test_catalog_service.py  test_curation_history.py  test_dashboard_stats.py  test_export.py  test_export_proposal.py  test_export_to_proposal.py  test_generate_themes.py  test_init_db.py  test_pgvector_migration.py  test_rss_service.py  test_security.py  test_system_setting.py  test_verify_pgvector_migration.py  test_verify_pgvector_query.py  test_verify_pgvector_schema.py
data/: fake_catalog_sample.csv
documents/: DB Seed Data執行說明.md  (+8 more)
(+49 files in other folders)
