[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.11.0",
    "fastapi>=0.100.0",
    "google-genai>=2.8.0",
    "google-generativeai>=0.1.0",
    "httpx2>=2.4.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.3.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "app/db/generate_fake_catalog.py",
    "app/db/seed_demo_data.py",
    "app/db/verify_catalog_import.py",
]

